--- a/source_code/pubspec.yaml
+++ b/source_code/pubspec.yaml
@@ -60,6 +60,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/images/dokter/
+    - assets/images/obat/
     - assets/icon/
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
